[gd_scene load_steps=2 format=3 uid="uid://d3qicivb4qvt5"]

[ext_resource type="Script" path="res://scenes/scripts/window_blur.gd" id="1_06urr"]

[node name="WindowBlur" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06urr")

[node name="BlurToggle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -80.0
offset_right = 58.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 31
toggle_mode = true
text = "BLUR"

[connection signal="toggled" from="BlurToggle" to="." method="_on_blur_toggle_toggled"]
